--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   deploy:
     environment: staging
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
 
@@ -22,39 +22,4 @@ jobs:
         echo "Current directory: $(pwd)"
         echo "Listing home directory:"
         ls -la ~
-
-        echo "Installing Node.js..."
-        if ! command -v nvm &> /dev/null; then
-          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
-          export NVM_DIR="$HOME/.nvm"
-          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
-        fi
-        nvm install node
-
-        echo "Installing PM2..."
-        if ! command -v pm2 &> /dev/null; then
-        npm install -g pm2
-        fi
-
-        REPO_URL="https://github.com/afkzoro/github-aws-ec2.git"
-        BRANCH="main"
-        REPO_DIR="$HOME/github-aws-ec2"
-
-        if [ -d "$REPO_DIR/.git" ]; then
-          cd "$REPO_DIR"
-          git pull origin "$BRANCH"
-        else
-          git clone "$REPO_URL" "$REPO_DIR"
-          cd "$REPO_DIR"
-        fi
-
-        cd "$REPO_DIR/simple-web-server"
-        npm install
-
-        cd ~/github-aws-ec2/simple-web-server
-        git pull origin main
-        npm install
-
-        echo "Starting/restarting application..."
-        pm2 restart server.js || pm2 start server.js
         '
